[BE] error - error fix